# dinasore

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
communication/: client_thread.py  tcp_server.py
core/: configuration.py  fb.py  fb_interface.py  fb_resources.py  main.py  manager.py  sniffer.py
data_model_fboot/: monitor.py  ua_manager.py  ua_method.py  ua_object.py  utils.py
opc_ua/: base.py  client.py
src/dinasore/: __main__.py
src/dinasore/communication/: tcp_server.py
src/dinasore/core/: configuration.py  fb.py  fb_interface.py  fb_resources.py  main.py  manager.py  sniffer.py
src/dinasore/data_model_fboot/: monitor.py  ua_manager.py  ua_method.py  ua_object.py  utils.py
src/dinasore/opc_ua/: client.py  handler.py  peer.py
