[project]
name = "dinasore"
version = "0.2.0"
description = "Dynamic INtelligent Architecture for Software and MOdular REconfiguration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "cryptography>=44.0.0",
    "emslib",
    "numpy>=2.2.0",
    "opcua>=0.98.13",
    "pandas>=2.2.3",
    "psutil>=6.1.0",
    "schedule>=1.2.2",
    "scikit-learn>=1.6.0",
]

[tool.uv.sources]
emslib = { git = "ssh://git@github.com/ramo48859/emsLib.git", branch = "main" }

[dependency-groups]
dev = [
    "snakeviz>=2.2.2",
]

[project.scripts]
dinasore = "dinasore.core.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dinasore"]


